@@ -1581,14 +1581,10 @@
   <block id="723596a60ea78fba91bcc7acb47cb786" category="paragraph">Une configuration haute disponibilité maintient la haute disponibilité de vos données comme suit :</block>
   <block id="f04b83c6c15bc920bde6b3bda82d692e" category="list-text">L'objectif du point de récupération (RPO) est de 0 seconde. Vos données sont transactionnaires, sans perte de données.</block>
   <block id="218815dee60a5e42cd50732e4ad90420" category="section-title">Modèles de déploiement HA</block>
-  <block id="a2efc5fc54fd68c09324deea01c6bc06" category="paragraph">Vous pouvez garantir la haute disponibilité de vos données en déployant une configuration haute disponibilité sur plusieurs zones de disponibilité (AZS) ou dans un seul AZ. Vous devriez consulter plus de détails sur chaque configuration afin de choisir celle qui répond le mieux à vos besoins.</block>
-  <block id="bc2a46f921494df9fc5f911909c03874" category="section-title">Plusieurs zones de disponibilité</block>
-  <block id="28cbbb231a21034634b99c799eadc9ce" category="paragraph">Le déploiement d'une configuration haute disponibilité dans plusieurs zones de disponibilité (AZS) garantit une haute disponibilité de vos données en cas de défaillance avec un système AZ ou une instance exécutant un nœud Cloud Volumes ONTAP. Vous devez comprendre l'impact des adresses IP NAS sur l'accès aux données et le basculement du stockage.</block>
   <block id="7657d465c1c0f4f6bfa9bdc17df2b08c" category="section-title">Accès aux données NFS et CIFS</block>
   <block id="9f0c295d98b756eb0b4e5810df0a50b2" category="inline-link-macro">Configuration d'une passerelle de transit AWS</block>
   <block id="34df161a9c0315272455a0dcc8b35711" category="paragraph">Lorsqu'une configuration haute disponibilité est répartie entre plusieurs zones de disponibilité, _adresses IP flottantes_ activez l'accès client NAS. Les adresses IP flottantes, qui doivent se trouver en dehors des blocs CIDR pour tous les VPC de la région, peuvent migrer entre les nœuds en cas de défaillance. Les clients ne sont pas accessibles de manière native en dehors du VPC, sauf si vous <block ref="f196b90949d1249f4f3797eb7257a21d" category="inline-link-macro-rx"></block>.</block>
   <block id="a3414a2e636e6d83d5c99532da30e296" category="paragraph">Si vous ne pouvez pas configurer de passerelle de transit, des adresses IP privées sont disponibles pour les clients NAS qui ne sont pas du VPC. Cependant, ces adresses IP sont statiques ; elles ne peuvent pas basculer d'un nœud à l'autre.</block>
-  <block id="b4af2eb1a5c665c00f00d9b68f64d5be" category="paragraph">Avant de déployer une configuration haute disponibilité sur plusieurs zones de disponibilité, vous devez consulter les exigences relatives aux adresses IP flottantes et aux tables de routage. Vous devez spécifier les adresses IP flottantes lors du déploiement de la configuration. Les adresses IP privées sont automatiquement créées par BlueXP.</block>
   <block id="105501f9e06615dbd24674715b14a137" category="inline-link-macro">Configuration réseau AWS requise pour Cloud Volumes ONTAP HA dans plusieurs AZS</block>
   <block id="f526d0fa31a1cecc71259047c426e2f2" category="section-title">Accès aux données iSCSI</block>
   <block id="eab11280467eeea00306f2c7d4c6a2d5" category="paragraph">La communication de données entre VPC n'est pas un problème car iSCSI n'utilise pas d'adresses IP flottantes.</block>
@@ -1603,8 +1599,6 @@
   <block id="24c0cd8b26bb96fcfde0ec7aa356e67c" category="paragraph">Les adresses IP de données NAS utilisées pour l'accès VPC externe ne peuvent pas migrer entre les nœuds en cas de défaillance. Si un nœud est hors ligne, vous devez remonter manuellement les volumes vers des clients en dehors du VPC à l'aide de l'adresse IP de l'autre nœud.</block>
   <block id="59cd6fed99392db807d679317017b518" category="paragraph">Une fois le nœud défaillant remis en ligne, remontez les clients vers les volumes à l'aide de l'adresse IP d'origine. Cette étape est nécessaire pour éviter le transfert de données inutiles entre deux nœuds HA, ce qui peut entraîner un impact significatif sur les performances et la stabilité.</block>
   <block id="bf20805083b34c4479e326ea7f16966f" category="paragraph">Vous pouvez facilement identifier l'adresse IP correcte dans BlueXP en sélectionnant le volume et en cliquant sur *Mount Command*.</block>
-  <block id="213cb4fa8613615178e793d9dcd42165" category="section-title">Zone de disponibilité unique</block>
-  <block id="b593d41d188d87529aac0e57d6b4594a" category="paragraph">Le déploiement d'une configuration HA dans une seule zone de disponibilité (AZ) peut garantir une haute disponibilité de vos données en cas de défaillance d'une instance exécutant un nœud Cloud Volumes ONTAP. Toutes les données sont accessibles en mode natif depuis l'extérieur du VPC.</block>
   <block id="31ac8d1ac9d098205b95d495a0a3f93a" category="inline-link">Groupe de placement AWS réparti</block>
   <block id="bf75afe84fa4d8e8637d67f46da78447" category="admonition">BlueXP crée un<block ref="69dad99e4ae4952ff167137be3a42452" category="inline-link-rx"></block> Et lance les deux nœuds haute disponibilité de ce groupe de placement. Le groupe de placement réduit le risque de défaillances simultanées en répartissant les instances sur un matériel sous-jacent distinct. Cette fonctionnalité améliore la redondance en termes de calcul, et non en termes de défaillance des disques.</block>
   <block id="7f87e6839b7919bf607ad546427cfbe1" category="section-title">Accès aux données</block>
@@ -5244,4 +5238,48 @@ Pour les paires HA, vous pouvez sélectionner les rôles IAM pour Cloud Volumes 
   <block id="21374a20e08d3e0c8ca328133d8fe5f4" category="list-text">Dans le coin supérieur droit de la console BlueXP, cliquez sur l'icône points de suspension et sélectionnez *Supprimer de l'espace de travail*.</block>
   <block id="b724364be6320cfd44126523f60ef584" category="inline-link">Déploiement programmatique des produits Marketplace</block>
   <block id="1466cb0ca0af8994440faa54da634c8d" category="list-text">*Abonnez-vous à Azure Marketplace* : vous voyez cette page si BlueXP n'a pas pu activer les déploiements de programmation de Cloud Volumes ONTAP. Suivez les étapes indiquées à l'écran. Voir<block ref="bc817edffaba6b19533f23cdb879088c" category="inline-link-rx"></block> pour en savoir plus.</block>
+  <block id="64d1ac557c8992bc5d65b98a95e0b497" category="section-title">Choisissez une zone locale prise en charge</block>
+  <block id="951d6dba79708fba245b5798bb84dde6" category="paragraph">Cloud Volumes ONTAP est pris en charge dans certaines zones locales AWS, y compris à Singapour. La sélection d'une zone locale est facultative.</block>
+  <block id="b1968c5681446da9bdcedadbf7a34131" category="inline-link-macro">Afficher la liste complète des zones locales</block>
+  <block id="a455e3549f40e60e4a9c2e8c6580a6a2" category="paragraph"><block ref="27bdb425ba8206d688a379332282fbb4" category="inline-link-macro-rx"></block>.
+Les zones locales doivent être activées avant de pouvoir créer et gérer des ressources dans ces zones.</block>
+  <block id="7d273ac4682ff6458339567063ef099c" category="inline-link-macro">Découvrez comment activer une zone locale</block>
+  <block id="9d27b872e974d3d08bf3a26f3677a159" category="paragraph"><block ref="4d81cb3a41369feab014b9955336458e" category="inline-link-macro-rx"></block>.</block>
+  <block id="f5d7776a3ddb7ca1ecdd36a3e71b0903" category="admonition">Phoenix n'est pas une zone locale prise en charge.</block>
+  <block id="14f93e26a64410a779a8f05ff019c578" category="paragraph">Vous pouvez assurer la haute disponibilité de vos données en déployant une configuration haute disponibilité dans plusieurs zones de disponibilité (AZ) ou dans une zone de disponibilité unique (AZ). Vous devriez consulter plus de détails sur chaque configuration afin de choisir celle qui répond le mieux à vos besoins.</block>
+  <block id="086e808bdf46a8027609222c8bc2ae0b" category="section-title">Plusieurs zones de disponibilité</block>
+  <block id="1f0c75dd86d99f8dd501e6ad73083cb9" category="paragraph">Le déploiement d'une configuration haute disponibilité dans plusieurs zones de disponibilité assure la haute disponibilité de vos données en cas de défaillance dans une zone de disponibilité ou une instance exécutant un nœud Cloud Volumes ONTAP. Vous devez comprendre l'impact des adresses IP NAS sur l'accès aux données et le basculement du stockage.</block>
+  <block id="9e1e9460b8dc471c1ab072416162e7fd" category="paragraph">Avant de déployer une configuration haute disponibilité sur plusieurs zones de disponibilité, vérifiez les exigences en matière d'adresses IP flottantes et de tables de routage. Vous devez spécifier les adresses IP flottantes lors du déploiement de la configuration. Les adresses IP privées sont automatiquement créées par BlueXP.</block>
+  <block id="9915334dccd6082757486cc7db7c4599" category="section-title">Zone de disponibilité unique</block>
+  <block id="4214b1507155cb0c63890d5526690625" category="paragraph">Le déploiement d'une configuration haute disponibilité dans une zone de disponibilité unique (AZ) peut assurer la haute disponibilité de vos données en cas de défaillance d'une instance exécutant un nœud Cloud Volumes ONTAP. Toutes les données sont accessibles en mode natif depuis l'extérieur du VPC.</block>
+  <block id="e0b08acf0828bf4594a0b9bd6411df1b" category="section-title">Zones locales AWS</block>
+  <block id="bc54c20d96244cbf865df76934081bb9" category="paragraph">AWS local zones est un déploiement d'infrastructure où le stockage, le calcul, la base de données et d'autres services AWS spécifiques sont situés à proximité de grandes villes et de secteurs. Avec AWS local zones, vous pouvez rapprocher les services AWS, ce qui améliore la latence de vos workloads et maintient les bases de données en local.</block>
+  <block id="ac654b16577855244ce7dae48d89fba9" category="paragraph">Vous pouvez déployer une configuration AZ unique ou plusieurs dans les zones locales AWS.</block>
+  <block id="2a6302a8529ac1ec37d01886ead088d0" category="section-title">Exemples de configurations de zone locale AWS</block>
+  <block id="19af59a268c506bb19268e318e2e9e5f" category="paragraph">Voici des exemples de configurations :</block>
+  <block id="cc9d5d3b16643a54feae6e4778e4d7b9" category="list-text">Zone de disponibilité unique : les nœuds de cluster et le médiateur se trouvent tous deux dans la même zone locale.</block>
+  <block id="9f1aad520102b4f5b24cb8c2d5dce3eb" category="list-text">Plusieurs zones de disponibilité
+Dans les configurations à plusieurs zones de disponibilité, il existe trois instances, deux nœuds et un médiateur. Une instance parmi les trois instances doit se trouver dans une zone distincte. Vous pouvez choisir la façon dont vous configurez cette fonction.</block>
+  <block id="693e51513559ce9e3ac257ad0f07f744" category="paragraph">Voici trois exemples de configuration :</block>
+  <block id="23cfd96026421dbbdfa6a706c9b57047" category="list-text">Chaque nœud de cluster se trouve dans une zone locale différente et le médiateur dans une zone de disponibilité publique.</block>
+  <block id="e7b2b5f10ffa3982dbe023fcc44d9809" category="list-text">Un nœud de cluster dans une zone locale, le médiateur dans une zone locale et le second nœud de cluster se trouvent dans une zone de disponibilité.</block>
+  <block id="7f1ca580f0235d8ecd120f9905161358" category="list-text">Chaque nœud de cluster et le médiateur se trouvent dans des zones locales distinctes.</block>
+  <block id="53e8d12efd0a1f3029b5796a1b3b6d97" category="section-title">Types de disques et d'instances pris en charge</block>
+  <block id="b725b06baf48d4e1dcf97d094f7fa465" category="paragraph">Le seul type de disque pris en charge est GP2.</block>
+  <block id="3d3c8175d796b0c12230914779b33fbb" category="paragraph">Les familles de types d'instances EC2 suivantes de tailles Xlarge à 4xlarge sont actuellement prises en charge :</block>
+  <block id="3f44a84e6e34fdb5a2f89c68d8c36175" category="list-text">M5</block>
+  <block id="fea813d4ddba3c46cf8b8e664b92cdaa" category="list-text">C5</block>
+  <block id="82bce2d16d12d889961dbfbfac9b0015" category="list-text">C5d</block>
+  <block id="e1b8054c9cdd622c9eeecfe71f26054a" category="list-text">R5</block>
+  <block id="513e8fcb60809102e57ea96961daab7c" category="list-text">R5d</block>
+  <block id="5eaba9c26c7009842affe7562eb137d3" category="inline-link-macro">Consultez AWS pour obtenir les informations les plus récentes et complètes sur les types d'instances EC2 prises en charge dans les zones locales</block>
+  <block id="5a38beb8a35f70ab33e7cb660b004cf6" category="paragraph"><block ref="3d9029b658475a88eed4e09e15fa8cce" category="inline-link-macro-rx"></block>.</block>
+  <block id="6d79fc3df77a055abb0043c41477add1" category="paragraph">Certaines zones locales AWS sont disponibles.</block>
+  <block id="b40c89ea76edb69b0a84d7a6a1be7455" category="inline-link-macro">Tutoriel AWS « commencer à déployer des applications à faible latence avec des zones locales AWS</block>
+  <block id="f8945f9c0b29d6212c5c9654ff1b7ed3" category="paragraph">Avant de pouvoir utiliser les zones locales AWS, vous devez activer les zones locales et créer un sous-réseau dans la zone locale de votre compte AWS. Suivez les étapes *opt in to an AWS local zone* et *exteNd your Amazon VPC to the local zone* de la <block ref="08374900627773b5f0e169d9824fde8a" category="inline-link-macro-rx"></block>.</block>
+  <block id="c0d8b980523f619bb9dff8ef93a968c9" category="paragraph">Si vous exécutez un connecteur version 3.9.36 ou antérieure, vous devez ajouter l'autorisation suivante au rôle du connecteur AWS dans la console AWS EC2 : DescribeAvailabilityzones.</block>
+  <block id="188fd7f75e50a8a882a75c15dcb630a1" category="section-title">17 mai 2024</block>
+  <block id="b3e67e9d7f5be7902fd87917d0acb3e0" category="section-title">Prise en charge des zones locales Amazon Web Services</block>
+  <block id="6f9fa4d02a6081aa6d33b131d8532328" category="paragraph">La prise en charge des zones locales AWS est désormais disponible pour les déploiements haute disponibilité Cloud Volumes ONTAP. AWS local zones est un déploiement d'infrastructure où le stockage, le calcul, la base de données et d'autres services AWS spécifiques sont situés à proximité de grandes villes et de secteurs.</block>
+  <block id="b75accaa363606f733ab4203f45f8193" category="paragraph">Pour plus d'informations sur les zones locales AWS avec déploiements HA, reportez-vous à la section <block ref="6830ae69d7be576a68a954338edafef9" category="inline-link-macro-rx"></block>.</block>
 </blocks>
